update mobile responsive

--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -33,3 +33,11 @@
   /* Support for IE. */
   font-feature-settings: 'liga';
 }
+
+.btn {
+  min-width: 50px;
+}
+
+.b-b {
+  border-bottom: 1px solid #dfdfdf;
+}
