--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,3 +1,4 @@
 @import '../../node_modules/vuetify/dist/vuetify.min.css';
 @import './font-awesome.css';
-@import './base';
+@import './main';
+@import './common';
