--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -34,10 +34,49 @@
   font-feature-settings: 'liga';
 }
 
+//button
 .btn {
   min-width: 50px;
 }
 
-.b-b {
-  border-bottom: 1px solid #dfdfdf;
+//form
+.form-filed {
+  .field-title {
+    font-size: 14px;
+    margin-bottom: 4px;
+  }
+
+  .field-comment {
+    font-size: 12px;
+    margin-top: 4px;
+    color: #777;
+  }
+
+  input.field-control {
+    width: 100%;
+    height: 30px;
+    border: 1px solid #311b92;
+    border-radius: 2px;
+
+    &[type="checkbox"] {
+      width: 30px;
+      // height: 30px;
+    }
+  }
+}
+
+// minxins
+@each $pos, $key in (t, top), (r, right), (b, bottom), (l,left) {
+
+  .b-#{$pos} {
+    border-#{$key}: 1px solid hsla(0,0%,100%,.12);
+  }
+
+  .b-#{$pos}-n {
+    border-#{$key}: none;
+  }
+}
+
+.b-n {
+  border: none;
 }
