--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -55,7 +55,7 @@
   input.field-control {
     width: 100%;
     height: 30px;
-    border: 1px solid #311b92;
+    border: 1px solid #ccc;
     border-radius: 2px;
 
     // &[type="checkbox"] {
