--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -15,7 +15,8 @@
   font-style: normal;
   font-size: 24px;  /* Preferred icon size */
   display: inline-block;
-  line-height: 1;
+  // line-height: 1;
+  line-height: 1.3; // self hosting has little asymmetric when use checkbox. here changed line-height to fix
   text-transform: none;
   letter-spacing: normal;
   word-wrap: normal;
@@ -24,6 +25,7 @@
 
   /* Support for all WebKit browsers. */
   -webkit-font-smoothing: antialiased;
+  -webkit-font-feature-settings: 'liga';
   /* Support for Safari and Chrome. */
   text-rendering: optimizeLegibility;
 
@@ -57,11 +59,6 @@
     height: 30px;
     border: 1px solid #ccc;
     border-radius: 2px;
-
-    // &[type="checkbox"] {
-    //   width: 30px;
-    //   // height: 30px;
-    // }
   }
 }
 
