--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,4 +1,7 @@
+//vendor
 @import '../../node_modules/vuetify/dist/vuetify.min.css';
+@import '../../node_modules/vue-multiselect/dist/vue-multiselect.min.css';
 @import './font-awesome.css';
+
 @import './main';
 @import './common';
