file-uploader still working in process

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,6 +1,7 @@
 //vendor
 @import '../../node_modules/vuetify/dist/vuetify.min.css';
 @import '../../node_modules/vue-multiselect/dist/vue-multiselect.min.css';
+@import '../../node_modules/vue2-dropzone/dist/vue2Dropzone.css';
 @import './font-awesome.css';
 
 @import './main';
