--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -39,6 +39,7 @@
 //button
 .btn {
   min-width: 50px;
+  text-transform: none;
 }
 
 //form
@@ -62,6 +63,11 @@
   }
 }
 
+//flex prop
+.flex-grow-0 {
+  flex-grow: 0;
+}
+
 // minxins
 @each $pos, $key in (t, top), (r, right), (b, bottom), (l,left) {
 
@@ -71,6 +77,13 @@
 
   .b-#{$pos}-n {
     border-#{$key}: none;
+  }
+}
+
+@each $size in 13, 15, 17, 18, 19 {
+
+  .font-#{$size} {
+    font-size: #{$size}px;
   }
 }
 
